implemented 'CpuCapSettings'