@@ -1,7 +1,8 @@
 package org.dacss.projectinitai.models.utilities;
-
+/**/
 import java.io.File;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.Objects;
 import java.util.stream.Stream;
 import reactor.core.publisher.Flux;
@@ -12,7 +13,7 @@ import reactor.core.publisher.Flux;
  */
 public class ListModelsUtil {
 
-    private static final Path LLM_DIRECTORY = Path.of("/home/$USER/.ai-initializer-project/models");
+    private static final Path LLM_DIRECTORY = Paths.get(System.getProperty("user.home"), ".ai-initializer-project", "models");
 
     /**
      * <h3>{@link #ListModelsUtil()}</h3>
@@ -23,7 +24,8 @@ public class ListModelsUtil {
     /**
      * <h3>{@link #listModels()}</h3>
      * Lists all models in the models directory.
-     * @return A Flux of all models in the models directory.
+     *
+     * @return A {@link Flux} of all models in the models directory.
      */
     public static Flux<Object> listModels() {
         File[] files = LLM_DIRECTORY.toFile().listFiles();
@@ -31,9 +33,10 @@ public class ListModelsUtil {
             return Flux.empty();
         }
         return Flux.using(
-            () -> Stream.of(Objects.requireNonNull(files)),
-            Flux::fromStream,
-            Stream::close
+                () -> Stream.of(Objects.requireNonNull(files)),
+                Flux::fromStream,
+                Stream::close
         ).map(File::getName);
     }
 }
+/**/
